OX axis visibility fix in launchesDuration chart

--- a/app/src/components/widgets/charts/launchesDurationChart/launchesDurationChart.scss
+++ b/app/src/components/widgets/charts/launchesDurationChart/launchesDurationChart.scss
@@ -7,6 +7,10 @@
         .c3-axis-y-label {
           font-size: 12px;
         }
+        path {
+          display: inline;
+          stroke: $COLOR--gray-80;
+        }
       }
     }
 
